# transcendence-memory

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release-checks.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_phase2_memory_core.py
compat/: migration-compatibility.json  release-compatibility.json
deploy/docker/: backend.env.example
deploy/systemd/: README.md  transcendence-memory-backend.env.example  transcendence-memory-backend.service
docs/: authentication.md  backend-deploy.md  frontend-handoff.md  release-compatibility.md  release-process.md  troubleshooting.md
docs/examples/: env.snippet  load_rag_config.sh  rag-config.example.json
docs/guide/: HUMAN_GUIDE_INDEX.md  INDEX.md  auth-handoff.md  backend-deployment.md  frontend-handoff.md  installation.md
docs/migration/: rag-everything-enhancer-contract.md  release-impact.md  source-vs-current.md
hooks/: adapter.py  auto-memory-prompt.md  hooks-cursor.json  hooks.json  post-commit-memory  run-hook.cmd  session-start
scripts/: bootstrap_dev.sh
skills/transcendence-memory/: SKILL.md
src/transcendence_memory/: __init__.py  cli.py
tests/: conftest.py
tests/api/: test_backend_health_route.py  test_health_route.py  test_memory_routes.py
tests/cli/: test_backend_deploy_command.py  test_backend_export_connection.py  test_backend_health_command.py  test_doctor_command.py  test_frontend_check.py  (+3 more)
transcendence-memory/: SKILL.md  _meta.json
(+163 files in other folders)
