[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "transcendence-memory"
version = "0.1.0"
description = "Bootstrap and configuration tooling for the Transcendence Memory OpenClaw skill and backend."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14.0",
  "authlib>=1.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "platformdirs>=4.3.6",
  "pgvector>=0.3.6",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "psycopg>=3.2.0",
  "sqlalchemy>=2.0.36",
  "tomli-w>=1.2.0",
  "typer>=0.16.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
transcendence-memory = "transcendence_memory.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/transcendence_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
